amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-object.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-object.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'name'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-object.api.graphql#/declares/shape/Person
  Property: http://www.w3.org/ns/shacl#property
  Range: [(9,0)-(12,1)]
  Location: 
